concession-kiosk-policy-demo/network-policy/backend/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: concession-kiosk-app
spec:
  podSelector:
    matchLabels:
      deployment: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: concession-kiosk-web
    - podSelector:
        matchLabels:
          deployment: frontend.concession-kiosk-web.svc.cluster.local
